adding chargepoint station  relationship
