# index.js
@@ -4,6 +4,7 @@ const connection = require("./config/db")
 const users = require('./routes/users')
 const stations = require('./routes/stations')
 const reviews = require('./routes/reviews')
+const chargepoints = require('./routes/chargepoints')
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger_output.json');
 
@@ -19,7 +20,7 @@ app.use('/doc', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 app.use(express.json());
 
-app.use("/api", [users, stations,reviews]);
+app.use("/api", [users, stations,reviews,chargepoints]);
 
 app.get('/', (req, res) => {
   res.json({ test: 'Hello Naiim!'})
